--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <title>Academia Alcateia Fit</title>
 
     <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,21 +17,48 @@
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
         integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
         crossorigin="anonymous"></script>
+
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
+    <header>
+        <div class="container" id="nav-container">
+            <nav class="navbar navbar-expand-lg fixed-top">
+                <a href="#" class="navbar-brand">
+                    <img id="logo" src="../imgs/LA_LOGO ALCATEIA FIT_final-4.svg" alt="Alcateia Fit">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links"
+                    aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" id="home-menu">Home</a>
+                        <a class="nav-item nav-link" id="sobre-menu">Sobre</a>
+                        <a class="nav-item nav-link" id="aulas-menu">Aulas</a>
+                        <a class="nav-item nav-link" id="planos-menu">Planos</a>
+                        <a class="nav-item nav-link" id="contatos-menu">Contatos</a>
+                    </div>
+                </div>
+            </nav>
 
+        </div>
+    </header>
 
-    <h1 class="mt-5">as</h1>
+    <!-- Inclua o jQuery primeiro -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-     <!-- Inclua o jQuery primeiro -->
-     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Inclua o Popper.js, necessário para os dropdowns e tooltips do Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
-     <!-- Inclua o Popper.js, necessário para os dropdowns e tooltips do Bootstrap -->
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
- 
-     <!-- Inclua o JavaScript do Bootstrap -->
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Inclua o JavaScript do Bootstrap -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
