Responsividade da capa e do item de navegação

--- a/html/index.html
+++ b/html/index.html
@@ -29,9 +29,9 @@
 <body>
     <header>
         <div class="container" id="nav-container">
-            <nav class="navbar navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-expand-lg">
                 <a href="#" class="navbar-brand">
-                    <img id="logo" src="../imgs/LA_LOGO ALCATEIA FIT_final-4.svg" alt="Alcateia Fit">
+                    <img id="logo" src="../imgs/LogoAcadFunTransp.svg" alt="Alcateia Fit">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links"
                     aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,9 +47,16 @@
                     </div>
                 </div>
             </nav>
-
         </div>
     </header>
+    <section>
+        <div id="capa">
+            <div id="textoCapa">
+                <h1>Alcateia fit</h1>
+                <h3>O lugar ideial para você e sua famiília.</h3>
+            </div>
+        </div>
+    </section>
 
     <!-- Inclua o jQuery primeiro -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
