Finalização dos ajustes do section planos

--- a/html/index.html
+++ b/html/index.html
@@ -59,91 +59,128 @@
             </div>
         </div>
     </section>
-    <section id="planos-menu">
-        <h1>Os melhores planos pra você</h1>
-        <p>Aqui na Alcateia fit você encontra os melhores planos</p>
-        <div id="planos" class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="card-plan hidden">
+    
+    <section2 id="sectionPlanos">
+        <div class="container title-plan">
+                <h1>Os melhores planos pra você</h1>
+                <p>Na alcateia fit você encontra os melhores planos</p>
+            <div id="planos" class="row">
+                <div class="col-12 col-md-6 col-lg-3 hidden">
+                    <div class="card-plan">
                         <p id="recomendado">Recomendado</p>
-                        <h5>Plano anual</h5>
-                        <ol>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Acesso completo às instalações da academia
-                            </li>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Flexibilidade total de horários
-                            </li>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Você economiza <span style="font-weight: 700;">R$420</span>
-                            </li>
-                        </ol>
-                        <h4>R$80<span style="font-size: 10px;">/mês</span></h4>
-                        <p id="pagamento">Pagamento anual total • R$960</p>
-                    </div>
-                    <div class="card-plan hidden">
-                        <h5>Plano Semestral</h5>
-                        <ol>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Acesso completo às instalações da academia
-                            </li>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Flexibilidade total de horários
-                            </li>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Você economiza <span style="font-weight: 700;">R$150</span>
-                            </li>
-                        </ol>
-                        <h4>R$90<span style="font-size: 10px;">/mês</span></h4>
-                        <p id="pagamento">Pagamento semestral total • R$540</p>
-                    </div>
-                    <div class="card-plan hidden">
-                        <h5>Plano Trimestral</h5>
-                        <ol>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Acesso completo às instalações da academia
-                            </li>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Flexibilidade total de horários
-                            </li>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Você economiza <span style="font-weight: 700;">R$30</span>
-                            </li>
-                        </ol>
-                        <h4>R$105<span style="font-size: 10px;">/mês</span></h4>
-                        <p id="pagamento">Pagamento trimestral total • R$315</p>
-                    </div>
-                    <div class="card-plan hidden">
-                        <h5>Plano Mensal</h5>
-                        <ol>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Acesso completo às instalações da academia
-                            </li>
-                            <li>
-                                <i class="fas fa-check" style="color: #000000;"></i>
-                                Flexibilidade total de horários
-                            </li>
-                        </ol>
-                        <h4>R$115<span style="font-size: 10px;">/mês</span></h4>
-                        <p id="pagamento">Pagamento mensal • R$115</p>
+                        <div class="conteudo-plan">
+                            <div class="beneficios">
+                            <h5>Plano anual</h5>
+                                <ol>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Acesso a todas as modalidades
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Acesso completo as instalações da academia
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Flexibilidade total de horários
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Você economiza <span style="font-weight: 700;">R$420</span>
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="valorTotal-plan">
+                                <h4>R$80<span style="font-size: 10px;">/mês</span></h4>
+                                <p style="font-size: 10px;" class="pt-2">Pagamento anual total • R$960</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-6 col-lg-3 hidden">
+                    <div class="card-plan">
+                        <div class="conteudo-plan">
+                            <div class="beneficios" style="margin-top: 20px;">
+                            <h5>Plano semestral</h5>
+                                <ol>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Acesso completo as instalações da academia
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Flexibilidade total de horários
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Você economiza <span style="font-weight: 700;">R$150</span>
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="valorTotal-plan">
+                                <h4>R$90<span style="font-size: 10px;">/mês</span></h4>
+                                <p style="font-size: 10px;" class="pt-2">Pagamento semestral total • R$540</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 hidden">
+                    <div class="card-plan">
+                        <div class="conteudo-plan">
+                            <div class="beneficios" style="margin-top: 20px;">
+                            <h5>Plano trimestral</h5>
+                                <ol>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Acesso completo as instalações da academia
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Flexibilidade total de horários
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Você economiza <span style="font-weight: 700;">R$30</span>
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="valorTotal-plan">
+                                <h4>R$105<span style="font-size: 10px;">/mês</span></h4>
+                                <p style="font-size: 10px;" class="pt-2">Pagamento trimestral total • R$315</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 hidden">
+                    <div class="card-plan">
+                        <div class="conteudo-plan">
+                            <div class="beneficios" style="margin-top: 20px;">
+                            <h5>Plano mensal</h5>
+                                <ol>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Acesso completo as instalações da academia
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-check" style="color: #000;"></i>
+                                        Flexibilidade total de horários
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="valorTotal-plan">
+                                <h4>R$115<span style="font-size: 10px;">/mês</span></h4>
+                                <p style="font-size: 10px;" class="pt-2">Pagamento mensal • R$115</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
-
-
         </div>
-    </section>
+
+    </section2>
+
+
 
     <!-- Inclua o jQuery primeiro -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
