Section modalidades concluida

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" id="home-menu">Home</a>
                         <a class="nav-item nav-link" id="planos-menu" href="#planos">Planos</a>
-                        <a class="nav-item nav-link" id="sobre-menu">Sobre</a>
+                        <a class="nav-item nav-link" id="sobre-menu" href="#modalidades">Modalidades</a>
                         <a class="nav-item nav-link" id="aulas-menu">Aulas</a>
                         <a class="nav-item nav-link" id="contatos-menu">Contatos</a>
                     </div>
@@ -59,18 +59,18 @@
             </div>
         </div>
     </section>
-    
+
     <section2 id="sectionPlanos">
         <div class="container title-plan">
-                <h1>Os melhores planos pra você</h1>
-                <p>Na alcateia fit você encontra os melhores planos</p>
+            <h1 class="hidden">Os melhores planos pra você</h1>
+            <p class="hidden">Na alcateia fit você encontra os melhores planos</p>
             <div id="planos" class="row">
                 <div class="col-12 col-md-6 col-lg-3 hidden">
                     <div class="card-plan">
                         <p id="recomendado">Recomendado</p>
                         <div class="conteudo-plan">
                             <div class="beneficios">
-                            <h5>Plano anual</h5>
+                                <h5>Plano anual</h5>
                                 <ol>
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
@@ -101,7 +101,7 @@
                     <div class="card-plan">
                         <div class="conteudo-plan">
                             <div class="beneficios" style="margin-top: 20px;">
-                            <h5>Plano semestral</h5>
+                                <h5>Plano semestral</h5>
                                 <ol>
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
@@ -128,7 +128,7 @@
                     <div class="card-plan">
                         <div class="conteudo-plan">
                             <div class="beneficios" style="margin-top: 20px;">
-                            <h5>Plano trimestral</h5>
+                                <h5>Plano trimestral</h5>
                                 <ol>
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
@@ -155,7 +155,7 @@
                     <div class="card-plan">
                         <div class="conteudo-plan">
                             <div class="beneficios" style="margin-top: 20px;">
-                            <h5>Plano mensal</h5>
+                                <h5>Plano mensal</h5>
                                 <ol>
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
@@ -174,11 +174,94 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
 
     </section2>
+
+    <section3 id="modalidades">
+        <div class="container">
+            <div id="modalidades-title" class="hidden">
+                <h1>Veja todas nossas modalidades</h1>
+                <p class="hidden">Descubra as opções perfeitas para seu estilo de vida saudável</p>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 hidden">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imgs/MuayThai1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Muay Thai</h5>
+                            <p class="card-text">Desenvolva força, resistência e foco com o Muay Thai. Uma arte marcial
+                                completa que trabalha tanto o corpo quanto a mente, ideal para quem busca autodefesa e
+                                condicionamento físico.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 hidden">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imgs/Boxe1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Boxe</h5>
+                            <p class="card-text">
+                                Melhore sua coordenação, reflexos e resistência com o Boxe. Uma modalidade dinâmica que
+                                fortalece o corpo e alivia o estresse enquanto você aprende técnicas de combate.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 hidden">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imgs/MuayThai.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Muay Thai Aula feminina</h5>
+                            <p class="card-text">
+                                Aula de Muay Thai exclusiva para mulheres. Fortaleça seu corpo, ganhe confiança e
+                                aprenda técnicas de autodefesa em um ambiente acolhedor e motivador.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 hidden">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imgs/MuayThai2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Muay Thai Aula Infantil</h5>
+                            <p class="card-text">
+                                O Muay Thai Infantil é ideal para crianças desenvolverem disciplina, coordenação e
+                                respeito. Uma prática divertida e segura que ensina autodefesa e promove o bem-estar.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 hidden">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imgs/jiu_jitsu.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Jiu-Jitsu</h5>
+                            <p class="card-text">
+                                Desafie seus limites com o Jiu-Jitsu! Aprenda técnicas de combate corpo a corpo enquanto
+                                fortalece sua mente e corpo, em uma modalidade que promove disciplina e autocontrole.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 hidden">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../imgs/musculacao.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Musculação</h5>
+                            <p class="card-text">
+                                Fortaleça seu corpo e melhore sua saúde com a Musculação. Treinos personalizados que
+                                ajudam a aumentar a massa muscular, melhorar a postura e elevar sua qualidade de vida.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section3>
 
 
 
@@ -190,9 +273,13 @@
 
     <!-- Inclua o JavaScript do Bootstrap -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <!--Script-->
     <script src="../js/script.js"></script>
+
 </body>
 
 </html>
