Efeito de expansão do conteudo planos adicionado

--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,7 @@
                                 <ol>
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
-                                        Acesso a todas as modalidades
+                                        Acesso a <span span style="font-weight: 700;">todas</span> as modalidades
                                     </li>
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
