--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-item nav-link" id="home-menu">Home</a>
                         <a class="nav-item nav-link" id="planos-menu" href="#planos">Planos</a>
                         <a class="nav-item nav-link" id="sobre-menu" href="#modalidades">Modalidades</a>
-                        <a class="nav-item nav-link" id="aulas-menu">Aulas</a>
+                        <a class="nav-item nav-link" id="aulas-menu" href="#aulas">Aulas</a>
                         <a class="nav-item nav-link" id="contatos-menu">Contatos</a>
                     </div>
                 </div>
@@ -87,6 +87,7 @@
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
                                         Você economiza <span style="font-weight: 700;">R$420</span>
+                                        em relação ao plano mensal
                                     </li>
                                 </ol>
                             </div>
@@ -114,6 +115,7 @@
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
                                         Você economiza <span style="font-weight: 700;">R$150</span>
+                                        em relação ao plano mensal
                                     </li>
                                 </ol>
                             </div>
@@ -141,6 +143,7 @@
                                     <li>
                                         <i class="fas fa-check" style="color: #000;"></i>
                                         Você economiza <span style="font-weight: 700;">R$30</span>
+                                        em relação ao plano mensal
                                     </li>
                                 </ol>
                             </div>
@@ -262,6 +265,58 @@
             </div>
         </div>
     </section3>
+
+    <section4 id="aulas">
+        <div class="container hidden">
+            <div id="aulas-title">
+                <h1>Veja os dias e horários das nossas aulas</h1>
+                <p class="hidden">Encontre o momento ideal para treinar e alcançar seus objetivos</p>
+                <div id="imgAulas">
+                    <img src="../imgs/TabelaAulas.png" alt="Foto dos horários da academia Alcateia Fit">
+                </div>
+                <a href="../imgs/TabelaAulas.png" download="">Baixar horário das aulas</a>
+            </div>
+        </div>
+    </section4>
+
+    <footer id="contatos">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-6">
+                    <div id="infoAcademia">
+                        <ul>
+                            <li>
+                                <Span>Telefone:</Span> 11950467062
+                            </li>
+                            <li>
+                                <Span>E-mail:</Span> vanessaxavierzanca@gmail.com
+                            </li>
+                            <li>
+                                <Span>Horário de funcionamento:</Span> Segunda a Sexta 06:00 ás 22:00 - Sábado e Feriado
+                                09:00 ás 13:00
+                            </li>
+                            <li>
+                                <Span>Endereço:</Span> Rua Chiquinha Gonzaga, 10 - Vila Primavera, São Paulo- SP
+                                03389-050
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-6">
+                    <div id="mapsAcademia">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.312727328942!2d-46.52978182388284!3d-23.59311486276099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d70c02d4691%3A0xb9565f22c7dec70d!2sR.%20Chiquinha%20Gonzaga%2C%2010%20-%20Vila%20Primavera%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2003389-050!5e0!3m2!1spt-BR!2sbr!4v1728151119836!5m2!1spt-BR!2sbr"
+                            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
+
 
 
 
