--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
         <div id="capa">
             <div id="textoCapa">
                 <h1>Alcateia fit</h1>
-                <h3>O lugar ideial para você e sua famiília.</h3>
+                <h3>O lugar ideial para você e sua famiília</h3>
             </div>
         </div>
     </section>
@@ -298,7 +298,12 @@
                             <li>
                                 <Span>Endereço:</Span> Rua Chiquinha Gonzaga, 10 - Vila Primavera, São Paulo- SP
                                 03389-050
-
+                            </li>
+                            <li id="icons">
+                                <h5 style="color: #ffc107;">Nossas redes socias:</h5>
+                                <a href="https://www.instagram.com/alcateiafitacademia/"><i class="fab fa-instagram fa-2x" ></i></a>
+                                <a href="https://www.facebook.com/alcateiafitacademia/?locale=pt_BR"><i class="fab fa-facebook fa-2x"></i></a>
+                                <a href=""><i class="fab fa-tiktok fa-2x"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -311,6 +316,11 @@
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
+            </div>
+            <div>
+                <p>
+                    © Alcateia Fit - CNPJ: 35.262.207/0001-19
+                </p>
             </div>
         </div>
 
