botão whatsapp criado

--- a/html/index.html
+++ b/html/index.html
@@ -57,6 +57,14 @@
                 <h1>Alcateia fit</h1>
                 <h3>O lugar ideial para você e sua famiília</h3>
             </div>
+            <div id="whatsapp" class="fixed-bottom">
+                <a
+                    href="https://wa.me//5511950467062/?text=Ol%C3%A1!%20Vim%20pelo%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es.">
+                    <i
+                        class="fab fa-whatsapp fa-4x">
+                    </i>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -301,8 +309,10 @@
                             </li>
                             <li id="icons">
                                 <h5 style="color: #ffc107;">Nossas redes socias:</h5>
-                                <a href="https://www.instagram.com/alcateiafitacademia/"><i class="fab fa-instagram fa-2x" ></i></a>
-                                <a href="https://www.facebook.com/alcateiafitacademia/?locale=pt_BR"><i class="fab fa-facebook fa-2x"></i></a>
+                                <a href="https://www.instagram.com/alcateiafitacademia/"><i
+                                        class="fab fa-instagram fa-2x"></i></a>
+                                <a href="https://www.facebook.com/alcateiafitacademia/?locale=pt_BR"><i
+                                        class="fab fa-facebook fa-2x"></i></a>
                                 <a href=""><i class="fab fa-tiktok fa-2x"></i></a>
                             </li>
                         </ul>
