--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Academia Alcateia Fit</title>
 
     <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
