--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" id="home-menu">Home</a>
-                        <a class="nav-item nav-link" id="planos-menu" href="#planos">Planos</a>
+                        <a class="nav-item nav-link" id="planos-menu" href="#sectionPlanos">Planos</a>
                         <a class="nav-item nav-link" id="sobre-menu" href="#modalidades">Modalidades</a>
                         <a class="nav-item nav-link" id="aulas-menu" href="#aulas">Aulas</a>
-                        <a class="nav-item nav-link" id="contatos-menu">Contatos</a>
+                        <a class="nav-item nav-link" id="contatos-menu" href="#contatos">Contatos</a>
                     </div>
                 </div>
             </nav>
@@ -308,7 +308,7 @@
                                 03389-050
                             </li>
                             <li id="icons">
-                                <h5 style="color: #ffc107;">Nossas redes socias:</h5>
+                                <h6 style="color: #ffc107;">Nossas redes socias:</h6>
                                 <a href="https://www.instagram.com/alcateiafitacademia/"><i
                                         class="fab fa-instagram fa-2x"></i></a>
                                 <a href="https://www.facebook.com/alcateiafitacademia/?locale=pt_BR"><i
