--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="capa">
             <div id="textoCapa">
                 <h1>Alcateia fit</h1>
-                <h3>O lugar ideial para você e sua famiília</h3>
+                <h3>O lugar ideal para você e sua famiília</h3>
             </div>
             <div id="whatsapp" class="fixed-bottom">
                 <a
@@ -195,7 +195,7 @@
         <div class="container">
             <div id="modalidades-title" class="hidden">
                 <h1>Veja todas nossas modalidades</h1>
-                <p class="hidden">Descubra as opções perfeitas para seu estilo de vida saudável</p>
+                <p>Descubra as opções perfeitas para seu estilo de vida saudável</p>
             </div>
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 hidden">
@@ -275,10 +275,10 @@
     </section3>
 
     <section4 id="aulas">
-        <div class="container hidden">
-            <div id="aulas-title">
+        <div class="container">
+            <div id="aulas-title" class="hidden">
                 <h1>Veja os dias e horários das nossas aulas</h1>
-                <p class="hidden">Encontre o momento ideal para treinar e alcançar seus objetivos</p>
+                <p>Encontre o momento ideal para treinar e alcançar seus objetivos</p>
                 <div id="imgAulas">
                     <img src="../imgs/TabelaAulas.png" alt="Foto dos horários da academia Alcateia Fit">
                 </div>
