Melhorando o tamanho do modal e adicionando o Icone da página

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia Alcateia Fit</title>
 
+    <!--Icon-->
+    <link rel="icon" href="../imgs/IconAlcateiaFit2.ico" type="image/x-icon">
+
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -23,9 +26,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
-
-
 </head>
 
 <body>
@@ -184,10 +184,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
-
     </section2>
 
     <section3 id="modalidades">
@@ -353,14 +351,9 @@
                 </p>
             </div>
         </div>
-
     </footer>
 
-
-
-
-
-    <!-- Inclua o jQuery primeiro -->
+    <!-- Inclua o jQuery-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Inclua o Popper.js, necessário para os dropdowns e tooltips do Bootstrap -->
@@ -374,7 +367,6 @@
 
     <!--Script-->
     <script src="../js/script.js"></script>
-
 </body>
 
 </html>
