adicionado link para o tik tok da academia

--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
                                         class="fab fa-instagram fa-2x"></i></a>
                                 <a href="https://www.facebook.com/alcateiafitacademia/?locale=pt_BR"><i
                                         class="fab fa-facebook fa-2x"></i></a>
-                                <a href=""><i class="fab fa-tiktok fa-2x"></i></a>
+                                <a href="https://www.tiktok.com/@alcateia.fit.acad?_t=8qO8OObPdBu&_r=1">
+                                    <i class="fab fa-tiktok fa-2x"></i></a>
                             </li>
                         </ul>
                     </div>
