Alterando informação de gmail e tiktok

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                 <Span>Telefone:</Span> 11950467062
                             </li>
                             <li>
-                                <Span>E-mail:</Span> vanessaxavierzanca@gmail.com
+                                <Span>E-mail:</Span> Alcateiafitacademia@gmail.com
                             </li>
                             <li>
                                 <Span>Horário de funcionamento:</Span> Segunda a Sexta 06:00 ás 22:00 - Sábado e Feriado
@@ -331,7 +331,7 @@
                                         class="fab fa-instagram fa-2x"></i></a>
                                 <a href="https://www.facebook.com/alcateiafitacademia/?locale=pt_BR"><i
                                         class="fab fa-facebook fa-2x"></i></a>
-                                <a href="https://www.tiktok.com/@alcateia.fit.acad?_t=8qO8OObPdBu&_r=1">
+                                <a href="https://www.tiktok.com/@alcateiafit">
                                     <i class="fab fa-tiktok fa-2x"></i></a>
                             </li>
                         </ul>
