Melhorando mecanismo de busca

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia Alcateia Fit</title>
+    <meta name="description"
+        content="Acesso completo às instalações da academia Alcateia Fit. Flexibilidade total de horários. Você economiza R$150 em relação ao plano mensal.">
+
+    <!-- Open Graph (para redes sociais e buscas) -->
+    <meta property="og:title" content="Academia Alcateia Fit">
+    <meta property="og:description"
+        content="Acesso completo às instalações da academia Alcateia Fit. Flexibilidade total de horários. Você economiza R$150 em relação ao plano mensal.">
+    <meta property="og:image" content="../imgs/IconAlcateiaFit2.ico">
+    <meta property="og:url" content="https://alcateia-fit.vercel.app">
+    <meta property="og:type" content="website">
 
     <!--Icon-->
     <link rel="icon" href="../imgs/IconAlcateiaFit2.ico" type="image/x-icon">
