--- a/index.html
+++ b/index.html
@@ -388,6 +388,13 @@
         crossorigin="anonymous"></script>
     <!--Script-->
     <script src="../js/script.js"></script>
+
+    <!-- Vercel Web Analytics -->
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
+
 </body>
 
 </html>
